// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/cascader/demo/basic.md correctly 1`] = `
<span
  class="c7n-cascader-picker"
  tabindex="0"
>
  <span
    class="c7n-cascader-picker-label"
  />
  <span
    class="c7n-input-wrapper c7n-input-has-label c7n-input-has-border"
  >
    <div
      class="c7n-input-content"
    >
      <div
        class="c7n-input-rendered-wrapper"
      >
        <div
          class="c7n-input-rendered"
        >
          <input
            autocomplete="off"
            class="c7n-input c7n-cascader-input "
            readonly=""
            type="text"
            value=""
          />
          <div
            class="c7n-input-label-wrapper"
          >
            <div
              class="c7n-input-label"
            >
              Please select
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
  <i
    class="icon icon-arrow_drop_down c7n-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/change-on-select.md correctly 1`] = `
<span
  class="c7n-cascader-picker"
  tabindex="0"
>
  <span
    class="c7n-cascader-picker-label"
  />
  <span
    class="c7n-input-wrapper c7n-input-has-border"
  >
    <div
      class="c7n-input-content"
    >
      <div
        class="c7n-input-rendered-wrapper"
      >
        <div
          class="c7n-input-rendered"
        >
          <input
            autocomplete="off"
            class="c7n-input c7n-cascader-input "
            readonly=""
            type="text"
            value=""
          />
          <div
            class="c7n-input-label-wrapper"
          >
            <div
              class="c7n-input-label"
            >
              Please select
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
  <i
    class="icon icon-arrow_drop_down c7n-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/custom-render.md correctly 1`] = `
<span
  class="c7n-cascader-picker c7n-input-has-value"
  style="width:100%"
  tabindex="0"
>
  <span
    class="c7n-cascader-picker-label"
  >
    <span>
      Zhejiang / 
    </span>
    <span>
      Hangzhou / 
    </span>
    <span>
      West Lake (
      <a>
        752100
      </a>
      )
    </span>
  </span>
  <span
    class="c7n-input-wrapper c7n-input-has-border"
  >
    <div
      class="c7n-input-content"
    >
      <div
        class="c7n-input-rendered-wrapper"
      >
        <div
          class="c7n-input-rendered"
        >
          <input
            autocomplete="off"
            class="c7n-input c7n-cascader-input "
            readonly=""
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </span>
  <i
    class="icon icon-arrow_drop_down c7n-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/custom-trigger.md correctly 1`] = `
<span>
  Unselect 
  <a
    href="#"
    tabindex="0"
  >
    Change city
  </a>
</span>
`;

exports[`renders ./components/cascader/demo/default-value.md correctly 1`] = `
<span
  class="c7n-cascader-picker c7n-input-has-value"
  tabindex="0"
>
  <span
    class="c7n-cascader-picker-label"
  >
    Zhejiang / Hangzhou / West Lake
  </span>
  <span
    class="c7n-input-wrapper c7n-input-has-border"
  >
    <div
      class="c7n-input-content"
    >
      <div
        class="c7n-input-rendered-wrapper"
      >
        <div
          class="c7n-input-rendered"
        >
          <input
            autocomplete="off"
            class="c7n-input c7n-cascader-input "
            readonly=""
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </span>
  <i
    class="icon icon-arrow_drop_down c7n-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/disabled-option.md correctly 1`] = `
<span
  class="c7n-cascader-picker"
  tabindex="0"
>
  <span
    class="c7n-cascader-picker-label"
  />
  <span
    class="c7n-input-wrapper c7n-input-has-border"
  >
    <div
      class="c7n-input-content"
    >
      <div
        class="c7n-input-rendered-wrapper"
      >
        <div
          class="c7n-input-rendered"
        >
          <input
            autocomplete="off"
            class="c7n-input c7n-cascader-input "
            readonly=""
            type="text"
            value=""
          />
          <div
            class="c7n-input-label-wrapper"
          >
            <div
              class="c7n-input-label"
            >
              Please select
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
  <i
    class="icon icon-arrow_drop_down c7n-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/hover.md correctly 1`] = `
<span
  class="c7n-cascader-picker"
  tabindex="0"
>
  <span
    class="c7n-cascader-picker-label"
  />
  <span
    class="c7n-input-wrapper c7n-input-has-border"
  >
    <div
      class="c7n-input-content"
    >
      <div
        class="c7n-input-rendered-wrapper"
      >
        <div
          class="c7n-input-rendered"
        >
          <input
            autocomplete="off"
            class="c7n-input c7n-cascader-input "
            readonly=""
            type="text"
            value=""
          />
          <div
            class="c7n-input-label-wrapper"
          >
            <div
              class="c7n-input-label"
            >
              Please select
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
  <i
    class="icon icon-arrow_drop_down c7n-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/lazy.md correctly 1`] = `
<span
  class="c7n-cascader-picker"
  tabindex="0"
>
  <span
    class="c7n-cascader-picker-label"
  />
  <span
    class="c7n-input-wrapper c7n-input-has-border"
  >
    <div
      class="c7n-input-content"
    >
      <div
        class="c7n-input-rendered-wrapper"
      >
        <div
          class="c7n-input-rendered"
        >
          <input
            autocomplete="off"
            class="c7n-input c7n-cascader-input "
            readonly=""
            type="text"
            value=""
          />
          <div
            class="c7n-input-label-wrapper"
          >
            <div
              class="c7n-input-label"
            >
              Please select
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
  <i
    class="icon icon-arrow_drop_down c7n-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/search.md correctly 1`] = `
<span
  class="c7n-cascader-picker"
  tabindex="0"
>
  <span
    class="c7n-cascader-picker-label"
  />
  <span
    class="c7n-input-wrapper c7n-input-has-border"
  >
    <div
      class="c7n-input-content"
    >
      <div
        class="c7n-input-rendered-wrapper"
      >
        <div
          class="c7n-input-rendered"
        >
          <input
            autocomplete="off"
            class="c7n-input c7n-cascader-input "
            type="text"
            value=""
          />
          <div
            class="c7n-input-label-wrapper"
          >
            <div
              class="c7n-input-label"
            >
              Please select
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
  <i
    class="icon icon-arrow_drop_down c7n-cascader-picker-arrow"
  />
</span>
`;

exports[`renders ./components/cascader/demo/size.md correctly 1`] = `
<div>
  <span
    class="c7n-cascader-picker c7n-cascader-picker-large"
    tabindex="0"
  >
    <span
      class="c7n-cascader-picker-label"
    />
    <span
      class="c7n-input-wrapper c7n-input-has-border"
    >
      <div
        class="c7n-input-content"
      >
        <div
          class="c7n-input-rendered-wrapper"
        >
          <div
            class="c7n-input-rendered"
          >
            <input
              autocomplete="off"
              class="c7n-input c7n-cascader-input c7n-input-lg"
              readonly=""
              type="text"
              value=""
            />
            <div
              class="c7n-input-label-wrapper"
            >
              <div
                class="c7n-input-label"
              >
                Please select
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
    <i
      class="icon icon-arrow_drop_down c7n-cascader-picker-arrow"
    />
  </span>
  <br />
  <br />
  <span
    class="c7n-cascader-picker"
    tabindex="0"
  >
    <span
      class="c7n-cascader-picker-label"
    />
    <span
      class="c7n-input-wrapper c7n-input-has-border"
    >
      <div
        class="c7n-input-content"
      >
        <div
          class="c7n-input-rendered-wrapper"
        >
          <div
            class="c7n-input-rendered"
          >
            <input
              autocomplete="off"
              class="c7n-input c7n-cascader-input "
              readonly=""
              type="text"
              value=""
            />
            <div
              class="c7n-input-label-wrapper"
            >
              <div
                class="c7n-input-label"
              >
                Please select
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
    <i
      class="icon icon-arrow_drop_down c7n-cascader-picker-arrow"
    />
  </span>
  <br />
  <br />
  <span
    class="c7n-cascader-picker c7n-cascader-picker-small"
    tabindex="0"
  >
    <span
      class="c7n-cascader-picker-label"
    />
    <span
      class="c7n-input-wrapper c7n-input-has-border"
    >
      <div
        class="c7n-input-content"
      >
        <div
          class="c7n-input-rendered-wrapper"
        >
          <div
            class="c7n-input-rendered"
          >
            <input
              autocomplete="off"
              class="c7n-input c7n-cascader-input c7n-input-sm"
              readonly=""
              type="text"
              value=""
            />
            <div
              class="c7n-input-label-wrapper"
            >
              <div
                class="c7n-input-label"
              >
                Please select
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
    <i
      class="icon icon-arrow_drop_down c7n-cascader-picker-arrow"
    />
  </span>
  <br />
  <br />
</div>
`;
